# arglib

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  release.yml  testpypi.yml
arglib/: __init__.py
arglib/ai/: __init__.py  assumptions.py  claim_types.py  credibility.py  edge_validation.py  evaluation.py  llm.py  miner.py  mining.py
arglib/algorithms/: __init__.py  basics.py
arglib/cli/: __init__.py  main.py
arglib/core/: __init__.py  bundles.py  evidence.py  graph.py  relations.py  spans.py  units.py  warrants.py
arglib/critique/: __init__.py  assumptions.py  fragility.py  patterns.py
arglib/data/: __init__.py  argument_graph.schema.json  patterns_bank.yaml
arglib/integrations/: __init__.py
arglib/io/: __init__.py  json.py  schema.py
arglib/reasoning/: __init__.py  credibility.py  explain.py  reasoner.py  warrant_gated.py
arglib/semantics/: __init__.py  dung.py
arglib/semantics/aba/: __init__.py  dispute_trees.py  framework.py
arglib/viz/: __init__.py  graphviz.py
docs/: api.md  cli.md  contributing.md  getting-started.md  index.md  long-doc-mining.md  release.md  roadmap.md  tutorials.md  v0-1.md
scripts/: check.sh
specs/: argumentation_library_design_spec_batteries_included_python.md
tests/: test_aba_framework.py  test_argument_bundles.py  test_assumptions.py  test_claim_credibility.py  test_claim_types.py  test_cli.py  test_core_graph.py  test_credibility.py  test_diagnostics.py  test_dispute_trees.py  test_edge_validation.py  test_evaluation.py  test_explain.py  test_fragility.py  test_long_doc_mining.py  test_miner.py  test_patterns.py  test_reasoner.py  test_schema.py  test_semantics_dung.py  test_smoke.py  test_viz_dot.py
