[project]
name = "arglib"
version = "0.0.1"
description = "Build a general-purpose, batteries-included Python library for creating, importing, analyzing, and reasoning over argument graphs derived from text and multimodal evidence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
arglib = "arglib.cli.main:main"

[dependency-groups]
dev = [
  "mkdocs",
  "pytest",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
