[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arglib"
version = "0.1.10"
description = "Build a general-purpose, batteries-included Python library for creating, importing, analyzing, and reasoning over argument graphs derived from text and multimodal evidence."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []
urls = { "Repository" = "https://github.com/vasanthsarathy/arglib" }

[project.scripts]
arglib = "arglib.cli.main:main"

[dependency-groups]
dev = [
  "build",
  "mkdocs",
  "mkdocs-material",
  "pytest",
  "ruff",
  "mypy",
  "pre-commit",
  "pypdf>=6.5.0",
  "ollama-python>=0.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arglib*"]

[tool.setuptools.package-data]
arglib = ["data/*.json", "data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
